--- a/atv_GME_Caua/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/atv_GME_Caua/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -186,7 +186,7 @@ Sintetizador=False
 Avançados=False
 
 [ContentBrowser]
-ContentBrowserDrawer.SelectedPaths=/Game/Blueprints
+ContentBrowserDrawer.SelectedPaths=/Game/UI
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.IsLocked=False
@@ -208,26 +208,28 @@ ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 ContentBrowserDrawer.ZoomScale=0
+ContentBrowserDrawer.JumpMRU=/All/Game/StarterContent/Textures
+ContentBrowserDrawer.JumpMRU=/All/Game/StarterContent/Shapes
+ContentBrowserDrawer.JumpMRU=/All/Game/StarterContent/Materials
+ContentBrowserDrawer.JumpMRU=/All/Game/ThirdPerson/Blueprints
+ContentBrowserDrawer.JumpMRU=/All/Game/ThirdPerson
+ContentBrowserDrawer.JumpMRU=/All/Game/UI
+ContentBrowserDrawer.JumpMRU=/All/Game
+ContentBrowserDrawer.JumpMRU=/All
+ContentBrowserDrawer.JumpMRU=/All/Game/StarterContent
+ContentBrowserDrawer.JumpMRU=/All/Game/FPS_Weapon_Bundle/Weapons/Materials
+ContentBrowserDrawer.JumpMRU=/All/Game/FPS_Weapon_Bundle/Weapons/Textures
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints
 ContentBrowserDrawer.JumpMRU=/All/Game/FPS_Weapon_Bundle/Weapons/Meshes
 ContentBrowserDrawer.JumpMRU=/All/Game/FPS_Weapon_Bundle/Weapons/Meshes/KA74U
 ContentBrowserDrawer.JumpMRU=/All/Game/FPS_Weapon_Bundle/Weapons
 ContentBrowserDrawer.JumpMRU=/All/Game/FPS_Weapon_Bundle
-ContentBrowserDrawer.JumpMRU=/All/Game
-ContentBrowserDrawer.JumpMRU=/All/Game/UI
-ContentBrowserDrawer.JumpMRU=/All
-ContentBrowserDrawer.JumpMRU=/All/Game/StarterContent/Textures
-ContentBrowserDrawer.JumpMRU=/All/Game/StarterContent/Shapes
-ContentBrowserDrawer.JumpMRU=/All/Game/StarterContent/Materials
 ContentBrowserDrawer.JumpMRU=/All/Game/StarterContent/Maps
-ContentBrowserDrawer.JumpMRU=/All/Game/FPS_Weapon_Bundle/Weapons/Materials
 ContentBrowserDrawer.JumpMRU=/All/Game/FPS_Weapon_Bundle/Weapons/Meshes/Ka47
 ContentBrowserDrawer.JumpMRU=/All/Game/FPS_Weapon_Bundle/Maps
 ContentBrowserDrawer.JumpMRU=/All/Game/Characters
-ContentBrowserDrawer.JumpMRU=/All/Game/StarterContent
 ContentBrowserDrawer.JumpMRU=/All/Game/LevelPrototyping
 ContentBrowserDrawer.JumpMRU=/All/Game/LevelPrototyping/Textures
-ContentBrowserDrawer.JumpMRU=/All/Game/ThirdPerson
 ContentBrowserDrawer.JumpMRU=/All/Game/LevelPrototyping/Materials
 ContentBrowserDrawer.JumpMRU=/All/Game/LevelPrototyping/Meshes
 AssetPropertyPicker.ThumbnailSize=2
@@ -243,12 +245,14 @@ LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
 OpenAssetsAtExit=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap:PersistentLevel.ThirdPersonMap
+OpenAssetsAtExit=/Game/UI/HUD.HUD
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -489,12 +493,100 @@ K2Node_CustomEvent.Graph=True
 K2Node_CustomEvent.Inputs=True
 BP_Plataform_C.TransformCommon=True
 BP_Plataform_C.Networking=True
+HUD_C.Appearance=True
+HUD_C.Input=True
+HUD_C.Interaction=True
+HUD_C.Designer=True
+HUD_C.Performance=True
+HUD_C.Layout=True
+HUD_C.Behavior=True
+HUD_C.Render Transform=True
+HUD_C.Localization=True
+HUD_C.Accessibility=True
+HUD_C.Rendering=True
+HUD_C.Navigation=True
+HorizontalBox.Layout=True
+HorizontalBox.Behavior=True
+HorizontalBox.Accessibility=True
+HorizontalBox.Render Transform=True
+HorizontalBox.Performance=True
+HorizontalBox.Rendering=True
+HorizontalBox.Navigation=True
+HorizontalBox.Localization=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Rendering=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
+BP_ThirdPersonCharacter_C.TransformCommon=True
+BP_ThirdPersonCharacter_C.Animation=True
+BP_ThirdPersonCharacter_C.Mesh=True
+BP_ThirdPersonCharacter_C.Tick=True
+BP_ThirdPersonCharacter_C.ComponentTick=True
+BP_ThirdPersonCharacter_C.Clothing=True
+BP_ThirdPersonCharacter_C.LeaderPoseComponent=True
+BP_ThirdPersonCharacter_C.Physics=True
+BP_ThirdPersonCharacter_C.Collision=True
+BP_ThirdPersonCharacter_C.Lighting=True
+BP_ThirdPersonCharacter_C.AnimationRig=True
+BP_ThirdPersonCharacter_C.Deformer=True
+BP_ThirdPersonCharacter_C.SkinWeights=True
+BP_ThirdPersonCharacter_C.HLOD=True
+BP_ThirdPersonCharacter_C.Rendering=True
+BP_ThirdPersonCharacter_C.Mobile=True
+BP_ThirdPersonCharacter_C.Navigation=True
+BP_ThirdPersonCharacter_C.RayTracing=True
+BP_ThirdPersonCharacter_C.VirtualTexture=True
+BP_ThirdPersonCharacter_C.Tags=True
+BP_ThirdPersonCharacter_C.AssetUserData=True
+BP_ThirdPersonCharacter_C.Replication=True
+BP_ThirdPersonCharacter_C.ComponentReplication=True
+BP_ThirdPersonCharacter_C.Activation=True
+BP_ThirdPersonCharacter_C.Variable=True
+BP_ThirdPersonCharacter_C.Cooking=True
+BP_ThirdPersonCharacter_C.Character Movement (General Settings)=True
+BP_ThirdPersonCharacter_C.Character Movement: Walking=True
+BP_ThirdPersonCharacter_C.Character Movement: Jumping / Falling=True
+BP_ThirdPersonCharacter_C.Character Movement: Gravity=True
+BP_ThirdPersonCharacter_C.Character Movement (Networking)=True
+BP_ThirdPersonCharacter_C.Character Movement: Swimming=True
+BP_ThirdPersonCharacter_C.Character Movement: Flying=True
+BP_ThirdPersonCharacter_C.Character Movement: Custom Movement=True
+BP_ThirdPersonCharacter_C.Character Movement (Rotation Settings)=True
+BP_ThirdPersonCharacter_C.Character Movement: Physics Interaction=True
+BP_ThirdPersonCharacter_C.Character Movement=True
+BP_ThirdPersonCharacter_C.Character Movement: Avoidance=True
+BP_ThirdPersonCharacter_C.RootMotion=True
+BP_ThirdPersonCharacter_C.Character Movement: NavMesh Movement=True
+BP_ThirdPersonCharacter_C.NavMovement=True
+BP_ThirdPersonCharacter_C.Velocity=True
+BP_ThirdPersonCharacter_C.PlanarMovement=True
+BP_ThirdPersonCharacter_C.MovementComponent=True
+BP_ThirdPersonCharacter_C.Shape=True
+BP_ThirdPersonCharacter_C.Character=True
+BP_ThirdPersonCharacter_C.Camera=True
+BP_ThirdPersonCharacter_C.Pawn=True
+BP_ThirdPersonCharacter_C.Actor=True
+BP_ThirdPersonCharacter_C.Input=True
+BP_ThirdPersonCharacter_C.Events=True
+BP_ThirdPersonCharacter_C.Materials=True
+PropertyWrapper.Variable=True
+PropertyWrapper.DefaultValueCategory=True
 
 [DetailPropertyExpansion]
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/StarterContent/Textures/T_MacroVariation.T_MacroVariation;
+RecentlyPlaced=/Game/StarterContent/Textures/T_Rock_Marble_Polished_D.T_Rock_Marble_Polished_D;
+RecentlyPlaced=/Game/StarterContent/Textures/T_Rock_Slate_D.T_Rock_Slate_D;
 RecentlyPlaced=/Game/BP_Platform.BP_Platform;/Engine/Transient.UnrealEdEngine_0:PlacementSubsystem_0.ActorFactoryBlueprint_0
 RecentlyPlaced=/Game/FPS_Weapon_Bundle/Weapons/Meshes/Ka47/SK_KA47_X.SK_KA47_X;
 RecentlyPlaced=/Game/FPS_Weapon_Bundle/Weapons/Meshes/Ka47/SM_KA47_X.SM_KA47_X;
@@ -512,9 +604,6 @@ RecentlyPlaced=/Game/Characters/Big_Body_Blow_Skeleton.Big_Body_Blow_Skeleton;
 RecentlyPlaced=/Game/Characters/Big_Body_Blow_PhysicsAsset.Big_Body_Blow_PhysicsAsset;
 RecentlyPlaced=/Game/Characters/Big_Body_Blow_Anim.Big_Body_Blow_Anim;
 RecentlyPlaced=/Game/Characters/Big_Body_Blow.Big_Body_Blow;
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
-RecentlyPlaced=/Game/StarterContent/Materials/M_Basic_Floor.M_Basic_Floor;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Chrome.M_Metal_Chrome;
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -2060,11 +2149,12 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/BP_Plataform
-MRUItem1=/Game/Blueprints/BP_ArmaPickup
-MRUItem2=/Game/UI/HUD
-MRUItem3=/Game/ThirdPerson/Maps/ThirdPersonMap
-MRUItem4=/Game/BP_Platform
+MRUItem0=/Game/UI/UIHUD
+MRUItem1=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem2=/Game/Blueprints/BP_Plataform
+MRUItem3=/Game/Blueprints/BP_ArmaPickup
+MRUItem4=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem5=/Game/BP_Platform
 
 [UMGEditor.Designer]
 bCommonResolutionSelected=False
@@ -2171,4 +2261,7 @@ bFilterBarVisible=False
 LastFilterBarLayout=Horizontal
 LastFilterBarSizeCoefficient=0.000000
 ThumbnailCaptureSettings=(CaptureFrameLocationRule=CurrentFrame)
+
+[MessageLog]
+LastLogListing=PIE
 
