--- a/atv_GME_Caua/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/atv_GME_Caua/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -208,12 +208,12 @@ ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 ContentBrowserDrawer.ZoomScale=0
+ContentBrowserDrawer.JumpMRU=/All/Game/UI
+ContentBrowserDrawer.JumpMRU=/All/Game/ThirdPerson/Blueprints
 ContentBrowserDrawer.JumpMRU=/All/Game/StarterContent/Textures
 ContentBrowserDrawer.JumpMRU=/All/Game/StarterContent/Shapes
 ContentBrowserDrawer.JumpMRU=/All/Game/StarterContent/Materials
-ContentBrowserDrawer.JumpMRU=/All/Game/ThirdPerson/Blueprints
 ContentBrowserDrawer.JumpMRU=/All/Game/ThirdPerson
-ContentBrowserDrawer.JumpMRU=/All/Game/UI
 ContentBrowserDrawer.JumpMRU=/All/Game
 ContentBrowserDrawer.JumpMRU=/All
 ContentBrowserDrawer.JumpMRU=/All/Game/StarterContent
@@ -248,10 +248,9 @@ DebuggerAttached=False
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
-OpenAssetsAtExit=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap:PersistentLevel.ThirdPersonMap
-OpenAssetsAtExit=/Game/UI/HUD.HUD
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 
 [DetailCategories]
@@ -578,6 +577,7 @@ BP_ThirdPersonCharacter_C.Events=True
 BP_ThirdPersonCharacter_C.Materials=True
 PropertyWrapper.Variable=True
 PropertyWrapper.DefaultValueCategory=True
+BP_ThirdPersonCharacter_C.Padrão=True
 
 [DetailPropertyExpansion]
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
@@ -2095,6 +2095,8 @@ ImportContentDialogSizeY=650
 /Game/UI/HUD.HUD=1
 /Game/Blueprints/BP_ArmaPickup.BP_ArmaPickup=1
 /Game/Blueprints/BP_Plataform.BP_Plataform=1
+/Game/UI/UIHUD.UIHUD=1
+/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2149,8 +2151,8 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/UI/UIHUD
-MRUItem1=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem1=/Game/UI/UIHUD
 MRUItem2=/Game/Blueprints/BP_Plataform
 MRUItem3=/Game/Blueprints/BP_ArmaPickup
 MRUItem4=/Game/ThirdPerson/Maps/ThirdPersonMap
